sidebar and top ok

--- a/slack_look/index.html
+++ b/slack_look/index.html
@@ -10,56 +10,13 @@
 <body>
     
 <div class="slack">
-    <nav class="teams">
-      <ul class="teams__list">
-        <li class="teams__item">
-          <button class="teams__button teams__button--active">
-            DA
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            SS
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            CS
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            PA
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            GF
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            OP
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            HP
-          </button>
-        </li>
-        <li class="teams__item">
-          <button class="teams__button">
-            DH
-          </button>
-        </li>
-      </ul>
-    </nav>
+    
     <div class="sidebar">
       <button class="team-menu">
         <div class="team-menu__info">
-          <h1 class="team-menu__name">Dumbledore's Army</h1>
+          <h1 class="team-menu__name">Denver Love Bubble</h1>
           <div class="team-menu__status">
-            <span class="team-menu__username">ramenhog</span>
+            <span class="team-menu__username">You</span>
           </div>
         </div>
         <span class="team-menu__alarm ion-ios-bell-outline"></span>
@@ -69,25 +26,22 @@
       </div>
       <div class="channels">
         <h2 class="channels__heading">
-          <span>Channels <span class="channels__number">(16)</span>
+          <span>Channels <span class="channels__number">(3)</span>
           </span>
           <button class="ion-ios-plus-outline channels__add"></button>
         </h2>
         <ul class="channels__list">
           <li class="channels__item">
-            <button class="channels__button"><span>general</span></button>
+            <button class="channels__button"><span>denver-se-announce</span></button>
           </li>
           <li class="channels__item">
-            <button class="channels__button"><span>random</span></button>
+            <button class="channels__button"><span>denver-tech-questions</span></button>
           </li>
           <li class="channels__item">
-            <button class="channels__button"><span>self-defense</span></button>
+            <button class="channels__button"><span>denver-random</span></button>
           </li>
           <li class="channels__item">
-            <button class="channels__button"><span>charms</span></button>
-          </li>
-          <li class="channels__item">
-            <button class="channels__button"><span>potions</span></button>
+            <button class="channels__button"><span>denver-chatbot-info</span></button>
           </li>
         </ul>
       </div>
@@ -99,24 +53,24 @@
         </h2>
         <ul class="dm__list">
           <li class="dm__item">
-            <button class="dm__button dm__button--slackbot"><span>slackbot</span></button>
+            <button class="dm__button dm__button--slackbot"><span>Elixa Newpal</span></button>
           </li>
           <li class="dm__item">
-            <button class="dm__button dm__button--online"><span>Harry Potter</span></button>
+            <button class="dm__button dm__button--online"><span>Tara Harwood</span></button>
           </li>
           <li class="dm__item">
-            <button class="dm__button"><span>Hermoine Granger</span></button>
+            <button class="dm__button"><span>Ahmed Gaber</span></button>
           </li>
           <li class="dm__item">
-            <button class="dm__button dm__button--online dm__button--active"><span>Ron Weasley</span></button>
+            <button class="dm__button dm__button--online dm__button--active"><span>Damon Chivers</span></button>
           </li>
           <li class="dm__item">
-            <button class="dm__button dm__button--online"><span>Neville Longbottom</span></button>
+            <button class="dm__button dm__button--online"><span>Kyle Coberly</span></button>
           </li>
           <li class="dm__item">
-            <button class="dm__button"><span>Ginny Weasley</span></button>
+            <button class="dm__button"><span>Brian Firooz</span></button>
           </li>
-          <li class="dm__item">
+          <!-- <li class="dm__item">
             <button class="dm__button dm__button--online"><span>Luna Lovegood</span></button>
           </li>
           <li class="dm__item">
@@ -127,13 +81,13 @@
           </li>
           <li class="dm__item">
             <button class="dm__button dm__button--online"><span>Lavender Brown</span></button>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
     <div class="main">
       <header class="main__header">
-        <h1 class="main__h1">Your preferences for Dumbledore's Army</h1>
+        <h3 class="main__h3">This is the very beginning of your direct message history with @ELIXA. Only the two of you are in this conversation, and no one else can join it. Learn more</h3>
         <button class="ion-android-close"></button>
       </header>
       <div class="main__content">
