slack look success

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <HTML>
 <HEAD>
 	<TITLE>ELIXA helps debug</TITLE>
-	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="ELIXA.js"></SCRIPT>
-	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="ELIXADATA.js"></SCRIPT>
+	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elixabot.js"></SCRIPT>
+	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elixadata.js"></SCRIPT>
 
-<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
+<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" defer>
 
 var elixa = new ElixaBot();
 var elixaLines = new Array();
