getting started on script edits

--- a/OG_ELIZA/index_teletype.html
+++ b/OG_ELIZA/index_teletype.html
@@ -57,7 +57,8 @@ function elixaStep() {
 </SCRIPT>
 </HEAD>
 
-<BODY TOPMARGIN="0" LEFTMARGIN="0" RIGHTMARGIN="0" BOTTOMMARGIN="0" MARGINHEIGHT="0" MARGINWIDTH="0" STYLE="border:0" onload="window.setTimeout('elixaReset()',100)"><A NAME="top"></A>
+<BODY TOPMARGIN="0" LEFTMARGIN="0" RIGHTMARGIN="0" BOTTOMMARGIN="0" MARGINHEIGHT="0" MARGINWIDTH="0" STYLE="border:0" 
+onload="window.setTimeout('elixaReset()',100)"><A NAME="top"></A>
 
 <CENTER>
 <P>&nbsp;</P>
