taking out extra lines

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             var initial = 'ELIXA: ' + elixa.getInitial();
             elixaLines.push(initial);
 // TARA CODE
-            extraBlankLines = '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n'
+            // extraBlankLines = '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n'
 
-            f.e_display.value = extraBlankLines + initial + '\n';     
+            f.e_display.value = initial + '\n';     
           }
           f.e_input.value = '';
           f.e_input.focus();
