just before msg work

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <div class="main__content">
           <div class="main__container">
             <h4 class="main__h4">Today </h4>
+            <span id="test-span"></span>
             <section class="main__section">
               <!-- add ELIXA code below -->
               <TABLE BORDER="0" CELLSPACING="10" CELLPADDING="0">
