play with textarea

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                   </TD>
                   </TR>
                   </TABLE>
+                  <div>
+                     <textarea id="msg-input" NAME="tara_e_display"></textarea>
+                  </div>
               </section>
             </div>
           </div>
@@ -199,7 +202,7 @@
         function appendMessage(message){
           const $msgItem = document.createElement('div')
           const $msgContainer = document.querySelector('#msg-container')
-          $msgItem.classList += 'message-item'
+          $msgItem.classList += 'msg-item'
           $msgItem.textContent = message
           $msgContainer.append($msgItem)
         }
