--- a/index.html
+++ b/index.html
@@ -5,38 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <!-- <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css"/> -->
-    <title>Elixa on Slack</title>
-    <script
-      language="JavaScript"
-      type="text/javascript"
-      src="elixabot.js"
-    ></script>
+
+    <script language="JavaScript" type="text/javascript"></script>
     <script
       language="JavaScript"
       type="text/javascript"
       src="elixadata.js"
     ></script>
+
+    <title>Elixa on Slack</title>
   </head>
+
   <body onload="window.setTimeout(elixaReset(),100)">
-    <div id="main-container">
-      <div id="left-sidebar">
-        <button class="team-menu">
-          <div class="team-menu__info">
-            <h1 class="team-menu__name">Denver Love Bubble</h1>
-            <div class="team-menu__status">
-              <span class="team-menu__username">You</span>
-            </div>
-          </div>
-          <span class="team-menu__alarm ion-ios-bell-outline"></span>
-        </button>
-        <div class="threads">
-          <span class="ion-chatbubble-working threads__icon"></span> All Threads
+    <div id="panel-container">
+      <div id="left-panel">
+        <div id="left-header">
+          <h1 id="team-title">Denver Love Bubble</h1>
+          <br />
+          <h4>You</h4>
+          <div>All Threads</div>
         </div>
         <div class="channels">
           <h2 class="channels__heading">
             <span>Channels <span class="channels__number">(3)</span> </span>
-            <button class="ion-ios-plus-outline channels__add"></button>
           </h2>
           <ul class="channels__list">
             <li class="channels__item">
@@ -63,8 +54,7 @@
         </div>
         <div class="dm">
           <h2 class="dm__heading">
-            <span>Direct messages <span class="dm__number">(29)</span> </span>
-            <button class="ion-ios-plus-outline dm__add"></button>
+            <span>Direct messages <span class="dm__number">(5)</span> </span>
           </h2>
           <ul class="dm__list">
             <li class="dm__item">
@@ -100,40 +90,16 @@
       </div>
 
       <div id="center-panel">
-        <header id="top-box" class="main__header">
-          <p>
+        <div id="center-header">
+          <span>
             This is the very beginning of your direct message history with
             @ELIXA. Only the two of you are in this conversation, and no one
             else can join it.
-          </p>
-          <button class="ion-android-close"></button>
-        </header>
-        <div class="main__content">
-          <div class="main__container">
-            <h4 class="main__h4">Today</h4>
-
-            <div id="msg-column">
-              <div id="msg-container">
-                <!-- messages get appended here -->
-              </div>
-
-              <!-- <section class="main__section">
-                <div id="form-div">
-                  <form
-                    id="msg-form"
-                    name="e_form"
-                    autocomplete="off"
-                    onsubmit="elixaStep();return false"
-                  >
-                    <input id="msg-input" type="text" name="e_input" />
-                    <input type="submit" style="display: none" />
-                  </form>
-                </div>
-              </section> -->
-            </div>
-          </div>
+          </span>
+          <p>Today</p>
         </div>
-        <div id="white-space">
+
+        <div id="msg-area">
           <form
             id="msg-form"
             name="e_form"
@@ -146,10 +112,11 @@
         </div>
       </div>
 
-      <div id="right-sidebar">
+      <div id="right-panel">
         <img id="details-image" src="elixa_sidebar_long.png" />
       </div>
     </div>
+
     <script language="JavaScript" type="text/javascript" defer>
       var elixa = new ElixaBot();
       var elixaLines = new Array();
