express working locally

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
       <link rel="stylesheet" type="text/css" href="styles.css" />
       <link rel="icon" href="favicon.png">
-      <script language="JavaScript" type="text/javascript" src="elixabot.js"></script>
-      <script language="JavaScript" type="text/javascript" src="elixadata.js"></script>
+      <script language="JavaScript" type="text/javascript" src="http://localhost:3000/elixabot.js"></script>
+      <script language="JavaScript" type="text/javascript" src="http://localhost:3000/elixadata.js"></script>
     
       <title>Elixa</title>
   </head>
