connected to heroku be

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
       <link rel="stylesheet" type="text/css" href="styles.css" />
       <link rel="icon" href="favicon.png">
-      <script language="JavaScript" type="text/javascript" src="http://localhost:3000/elixabot.js"></script>
-      <script language="JavaScript" type="text/javascript" src="http://localhost:3000/elixadata.js"></script>
+      <script language="JavaScript" type="text/javascript" src="https://elixa-newpal-node.herokuapp.com/elixabot.js"></script>
+      <script language="JavaScript" type="text/javascript" src="https://elixa-newpal-node.herokuapp.com/elixadata.js"></script>
     
       <title>Elixa</title>
   </head>
@@ -64,7 +64,6 @@
               </div>
 
               <div id="input-area">
-                  <!-- <img id="slack-msg-box" src="slack-msg-box.png" /> -->
                   <form id="msg-form" name="e_form" autocomplete="off" onsubmit="elixaStep();return false">
                     <input id="msg-input" type="text" name="e_input"/>
                     <input type="submit" style="display: none" />
