--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
             <div id="you-header">
                 <h4>🟢 You</h4>
             </div>
-            <p>All Threads</p>
+            <p><a href="https://mostlyambivalent.com/collections/flatiron-school-software-engineering" target="_blank">All Threads</a></p>
 
             <div id="channels">  
               <h5>CHANNELS (4)</h5>
-              <p># denver-se-announce</p>
-              <p># denver-tech-questions</p>
-              <p># denver-random</p>          
-              <p># chatbot-info</p>
+              <p><a href="https://flatiron-school-denver.firebaseapp.com" target="_blank"># denver-se-announce</a></p>
+              <p><a href="https://app.slack.com/client/T02MD9XTF/C010H32LNN7" target="_blank"># denver-tech-questions</a></p>
+              <p><a href="https://www.thrillist.com/entertainment/denver/things-to-do-in-denver" target="_blank"># denver-random</a></p>          
+              <p><a href="https://github.com/tara-m-harwood/elixa-newpal-fe/blob/main/README.md" target="_blank"># chatbot-info</a></p>
             </div>
 
             <div id="dms">
               <h5>DIRECT MESSAGES (8)</h5>
-              <p>🟢 Elixa Newpal</p>
-              <p>🟢 Tara Harwood</p>
+              <p id="active">🟢 Elixa Newpal</p>
+              <p><a href="https://www.linkedin.com/in/taraharwood/" target="_blank">🟢 Tara Harwood</a></p>
               <p>⭘ Marc Majcher</p>
               <p>⭘ Phil Haines</p>                      
               <p>⭘ Kyle Coberly</p>
