left-panel good

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
               <h5>DIRECT MESSAGES (8)</h5>
               <p id="active">🟢 Elixa Newpal</p>
               <p><a href="https://www.linkedin.com/in/taraharwood/" target="_blank">🟢 Tara Harwood</a></p>
-              <p>⭘ Marc Majcher</p>
-              <p>⭘ Phil Haines</p>                      
-              <p>⭘ Kyle Coberly</p>
-              <p>⭘ Damon Chivers</p> 
-              <p>⭘ Ahmed Gaber</p>                                      
+              <p><a href="https://www.linkedin.com/in/marcmajcher/" target="_blank">⭘ Marc Majcher</a></p>
+              <p><a href="https://www.linkedin.com/in/philip-haines/" target="_blank">⭘ Phil Haines</a></p>
+              <p><a href="https://www.linkedin.com/in/kylecoberly/" target="_blank">⭘ Kyle Coberly</a></p>                      
+              <p><a href="https://www.linkedin.com/in/damon-chivers/" target="_blank">⭘ Damon Chivers</a></p> 
+              <p><a href="https://www.linkedin.com/in/ahmedtgaber/" target="_blank">⭘ Ahmed Gaber</a></p>                                   
             </div>    
 
           </div>
