trying netlify.toml

--- a/denver-love/test.html
+++ b/denver-love/test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elixa.io</title>
-  </head>
-  <body>
-    <img src="assets/elixa_small.png">
-  </body>
+    <title>testing</title>
+</head>
+<body>
+    <img src="../assets/coder_avatar.png"
+</body>
 </html>
