--- a/denver-love/denver-love.html
+++ b/denver-love/denver-love.html
@@ -16,7 +16,7 @@
   <body onload="window.setTimeout(elixaReset(),100)">
 
       <div id="search-bar">
-          <img id="search-img" src="assets/search.png" />
+          <img id="search-img" src="../assets/search.png" />
       </div>
 
       <div id="main">
@@ -52,8 +52,8 @@
           <div id="center-panel" class="panel" >
 
               <div id="center-header">
-                  <img id="elixa-center-header" src="assets/elixa-center-header.png" />                
-                  <img id="begin-img" src="assets/beginning.png" />
+                  <img id="elixa-center-header" src="../assets/elixa-center-header.png" />                
+                  <img id="begin-img" src="../assets/beginning.png" />
               </div>
 
               <div id="message-area">
@@ -72,7 +72,7 @@
 
           <div id="right-panel" class="panel" >
               <div id="details-pane">
-                  <img id="elixa-details-pane" src="assets/elixa-details-pane.png" />
+                  <img id="elixa-details-pane" src="../assets/elixa-details-pane.png" />
               </div>
           </div>
 
@@ -151,9 +151,9 @@
 
           const $msgImage = document.createElement('img')
           if (elixa) {
-            $msgImage.src = "assets/elixa_avatar.png"
+            $msgImage.src = "../assets/elixa_avatar.png"
           } else {  
-            $msgImage.src = "assets/coder_avatar.png"          
+            $msgImage.src = "../assets/coder_avatar.png"          
           }
           $msgImage.classList += "msg-avatar"
 
