slew of interface touches

--- a/denver-love.html
+++ b/denver-love.html
@@ -32,7 +32,7 @@
               <h5>CHANNELS (4)</h5>
               <p><a href="https://flatiron-school-denver.firebaseapp.com" target="_blank"># denver-se-announce</a></p>
               <p><a href="https://app.slack.com/client/T02MD9XTF/C010H32LNN7" target="_blank"># denver-tech-questions</a></p>
-              <p><a href="https://www.thrillist.com/entertainment/denver/things-to-do-in-denver" target="_blank"># denver-random</a></p>          
+              <p><a href="https://c.xkcd.com/random/comic/" target="_blank"># denver-random</a></p>          
               <p><a href="https://github.com/tara-m-harwood/elixa-newpal-fe/blob/main/README.md" target="_blank"># chatbot-info</a></p>
             </div>
 
