--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="icon" href="favicon.png">
     <title>elixa.io</title>
   </head>
   <body>
-    <img src="assets/elixa_small.png">
+    <div id=main>
+      <img id="logo" src="assets/elixa.png">
+      <div id="icons">
+        <a href="https://github.com/tara-m-harwood"><img id="logo" src="assets/github.png"/></a>
+        <a href="https://www.linkedin.com/in/taraharwood/"><img id="logo" src="assets/linkedin.png"></a>              
+      </div>
+    </div>
   </body>
 </html>
