tweaks to home page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.png">
     <title>elixa.io</title>
   </head>
   <body>
-    <div id=main>
-      <img id="logo" src="assets/elixa.png">
-      <div id="icons">
-        <a href="https://github.com/tara-m-harwood"><img id="logo" src="assets/github.png"/></a>
-        <a href="https://www.linkedin.com/in/taraharwood/"><img id="logo" src="assets/linkedin.png"></a>              
-      </div>
+    <div id=main-container>
+      <div id="logo-container">
+        <img id="logo" src="assets/elixa.png">
+        <div id="icon-container">
+          <a href="https://github.com/tara-m-harwood"><img id="logo" src="assets/github.png"/></a>
+          <a href="https://www.linkedin.com/in/taraharwood/"><img id="logo" src="assets/linkedin.png"></a>              
+        </div>
+      </div>  
+        <div id="message-container">
+          <h1 id="welcome"> welcome to elixa.io</h1>
+          <h2> a welcoming home for chatbots</h2>
+          <h2> who work outside the customer service field</h2>
+          <h1> ___________________________________________</h1>
+          <h1> Arriving in June 2021: Elixa Duxworth!</h1>
+          <h1> Currently assisting coders: 
+            <a href="https://elixa.io/denver-love">Elixa Newpal!</a>
+          <!-- <img id="logo" src="assets/elixa.png"> -->
+        </div>
+      </div>  
     </div>
   </body>
 </html>
